Updated readme and some finishing touches

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 # File path pointing to installation of SPECTRA
-- spectra_path: "../spectra"
+spectra_path: "../spectra"
 
 # True if SPECTRA can utilize a compatible GPU
 # False otherwise
-- gpu_enable: False
+gpu_enable: False
